Added Pages and made minor changes to the index

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">About</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Contact</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-             &copy; 2024 - Email: maciejwenerski02@gmail.com - <a href="https://github.com/MWenerski" target="_blank" rel="noopener noreferrer">Github Profile</a> 
+             &copy; 2024 - <a href="https://github.com/MWenerski" target="_blank" rel="noopener noreferrer">Github Profile</a> 
         </div>
     </footer>
 
